# PokemonCatalogue

./: .gitignore  CMakeLists.txt  Catalogue.h  Pokemon.cpp  Pokemon.h  PokemonCatalogue.cpp  README.md  clean.sh  cmake_install.cmake  discord code snippets.txt  fakegitignore  makefile
.github/workflows/: build.yml
Pokemonfiles/: fileformat.txt
cmake/: CMakeCache.txt
devFiles/: filePaths.cpp  menu-idea.txt  read-examples.txt  sort-idea.txt
include/: Catalogue.h  Pokemon.h
pokemonGenerationFiles/: Pokemon2.txt  Pokemon3.txt  Pokemon4.txt  Pokemon5.txt  Pokemon6.txt  Pokemon7.txt  Pokemon8.txt  Pokemon9.txt  instructions.txt
pokemonLists/: Pokemon1.txt
src/: CMakeLists.txt  Catalogue.cpp  Pokemon.cpp  PokemonCatalogue.cpp  cmake_install.cmake  find.file  outputPokemonLink
textFiles/: discord-code-snippets.txt  menu-ideas.txt
textFiles/pokemonLists/: Pokemon1.txt  Pokemon2.txt  Pokemon3.txt  fileformat.txt
